feat: Implement initial loading spinner and Gemini API key handling
Adds a loading spinner to the index.html to provide visual feedback while the app bootstraps. Also, addresses a potential ReferenceError by defining `process.env` in the browser environment and refactors the Gemini service to safely access the API key from `window.process.env`, preventing crashes if the key is not defined. Updates imports for `.ts` files for consistency.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,27 @@
     <title>বাকি ও বিকাশ খাতা - Supabase Cloud</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      // Browser safety: defines process.env to prevent ReferenceError crashes
+      window.process = { env: { API_KEY: "" } };
+    </script>
     <style>
         body {
             font-family: 'Hind Siliguri', sans-serif;
             background-color: #f8fafc;
+        }
+        /* Loading spinner animation */
+        .spinner {
+            width: 40px;
+            height: 40px;
+            border: 4px solid #f3f3f3;
+            border-top: 4px solid #059669;
+            border-radius: 50%;
+            animation: spin 1s linear infinite;
+        }
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 <script type="importmap">
@@ -26,6 +43,11 @@
 </script>
 </head>
 <body>
-    <div id="root"></div>
+    <div id="root">
+        <div style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 15px;">
+            <div class="spinner"></div>
+            <p style="font-family: sans-serif; color: #64748b; font-weight: bold;">অ্যাপটি লোড হচ্ছে...</p>
+        </div>
+    </div>
 </body>
 </html>
