--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <script type="importmap">
 {
   "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
+    "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "react": "https://esm.sh/react@19.0.0",
     "react/": "https://esm.sh/react@19.0.0/",
     "react-dom": "https://esm.sh/react-dom@19.0.0",
@@ -65,7 +65,6 @@
             <div id="error-display" style="display: none; width: 100%; max-width: 400px;"></div>
         </div>
     </div>
-    <!-- This is the most important part: loading the main file -->
     <script type="module" src="index.tsx"></script>
 </body>
 </html>
