--- a/index.html
+++ b/index.html
@@ -4,24 +4,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>বাকি ও বিকাশ খাতা - Supabase Cloud</title>
+    <title>বাকি ও বিকাশ খাতা - ডিজিটাল লেজার</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
-      // Polyfill for process and global to prevent library crashes
+      // Polyfill and environment setup
       window.process = { env: { NODE_ENV: 'production', API_KEY: '' } };
       window.global = window;
       
-      // Error logger to catch and show startup errors
+      // Detailed error logger
       window.addEventListener('error', function(event) {
+        console.error("Global error caught:", event.error);
         const errorDiv = document.getElementById('error-display');
         if (errorDiv) {
           errorDiv.style.display = 'block';
           errorDiv.innerHTML = `
-            <div style="background: #fee2e2; border: 2px solid #ef4444; padding: 15px; border-radius: 12px; margin-top: 20px; font-family: monospace; font-size: 12px; color: #b91c1c; text-align: left;">
-              <strong>Error:</strong> ${event.message}<br>
-              <strong>File:</strong> ${event.filename?.split('/').pop()}<br>
-              <button onclick="location.reload()" style="display: block; margin-top: 10px; background: #ef4444; color: white; padding: 5px 10px; border-radius: 5px; font-weight: bold;">পুনরায় লোড করুন</button>
+            <div style="background: #fee2e2; border: 2px solid #ef4444; padding: 15px; border-radius: 12px; margin-top: 20px; font-family: sans-serif; font-size: 13px; color: #b91c1c; text-align: left;">
+              <strong style="display:block; margin-bottom:5px;">⚠️ অ্যাপ লোড হতে সমস্যা হয়েছে</strong>
+              <div style="font-family: monospace; background: rgba(0,0,0,0.05); padding: 8px; border-radius: 6px; margin-bottom: 10px;">
+                ${event.message}
+              </div>
+              <button onclick="location.reload()" style="width: 100%; background: #ef4444; color: white; padding: 8px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer;">আবার চেষ্টা করুন (Reload)</button>
             </div>
           `;
         }
@@ -30,13 +33,13 @@
 <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0?dev",
+    "react-dom": "https://esm.sh/react-dom@19.0.0?deps=react@19.0.0&dev",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?deps=react@19.0.0&dev",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
-    "react": "https://esm.sh/react@19.0.0",
-    "react/": "https://esm.sh/react@19.0.0/",
-    "react-dom": "https://esm.sh/react-dom@19.0.0",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.4/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/"
   }
 }
 </script>
@@ -45,24 +48,25 @@
             font-family: 'Hind Siliguri', sans-serif;
             background-color: #f8fafc;
             margin: 0;
+            overflow-x: hidden;
         }
         .spinner {
-            width: 48px;
-            height: 48px;
-            border: 5px solid #f3f3f3;
-            border-top: 5px solid #059669;
+            width: 50px;
+            height: 50px;
+            border: 6px solid #e2e8f0;
+            border-top: 6px solid #059669;
             border-radius: 50%;
-            animation: spin 1s linear infinite;
+            animation: spin 1s cubic-bezier(0.5, 0, 0.5, 1) infinite;
         }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
     </style>
 </head>
 <body>
     <div id="root">
-        <div style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center;">
+        <div style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; background: white;">
             <div class="spinner"></div>
-            <p style="font-family: sans-serif; color: #64748b; font-weight: bold; margin-top: 20px;">অ্যাপটি লোড হচ্ছে...</p>
-            <div id="error-display" style="display: none; width: 100%; max-width: 400px;"></div>
+            <p style="color: #64748b; font-weight: 700; margin-top: 24px; font-size: 18px;">বিসমিল্লাহ টেলিকম খাতা লোড হচ্ছে...</p>
+            <div id="error-display" style="display: none; width: 100%; max-width: 400px; margin-top: 20px;"></div>
         </div>
     </div>
     <script type="module" src="index.tsx"></script>
