--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       window.process = { env: { NODE_ENV: 'production', API_KEY: '' } };
       window.global = window;
       
-      // Detailed error logger
+      // Error logger to catch and show startup errors
       window.addEventListener('error', function(event) {
         console.error("Global error caught:", event.error);
         const errorDiv = document.getElementById('error-display');
@@ -33,9 +33,9 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0?dev",
-    "react-dom": "https://esm.sh/react-dom@19.0.0?deps=react@19.0.0&dev",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client?deps=react@19.0.0&dev",
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
     "@google/genai": "https://esm.sh/@google/genai@1.3.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
