feat: Update branding and authentication
Refactors the application to use Supabase for authentication and updates the branding to "বাকির যম". Includes changes to the loading state, header styles, and login/registration flow to support email-based authentication.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>বাকি ও বিকাশ খাতা - ডিজিটাল লেজার</title>
+    <title>বাকির যম - ডিজিটাল হিসাব খাতা</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script>
@@ -54,7 +54,7 @@
             width: 50px;
             height: 50px;
             border: 6px solid #e2e8f0;
-            border-top: 6px solid #059669;
+            border-top: 6px solid #0f172a;
             border-radius: 50%;
             animation: spin 1s cubic-bezier(0.5, 0, 0.5, 1) infinite;
         }
@@ -65,7 +65,8 @@
     <div id="root">
         <div style="height: 100vh; display: flex; flex-direction: column; align-items: center; justify-content: center; padding: 20px; text-align: center; background: white;">
             <div class="spinner"></div>
-            <p style="color: #64748b; font-weight: 700; margin-top: 24px; font-size: 18px;">বিসমিল্লাহ টেলিকম খাতা লোড হচ্ছে...</p>
+            <p style="color: #0f172a; font-weight: 800; margin-top: 24px; font-size: 20px;">বাকির যম লোড হচ্ছে...</p>
+            <p style="color: #94a3b8; font-weight: 600; font-size: 14px; margin-top: 4px;">হিসাব খাতাটি তৈরি করা হচ্ছে</p>
             <div id="error-display" style="display: none; width: 100%; max-width: 400px; margin-top: 20px;"></div>
         </div>
     </div>
